--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="app"></div>
 
+    <script deasync src="js/jquery.min.js" ></script>
     <script src="js/react.js"></script>
     <script src="js/react-dom.js"></script>
     <script src="js/socket.io.min.js"></script>
