--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <div id="app"></div>
 
     <script deasync src="js/jquery.min.js" ></script>
+    <script deasync src="js/shake.js" ></script>
     <script src="js/react.js"></script>
     <script src="js/react-dom.js"></script>
     <script src="js/socket.io.min.js"></script>
