added final working implementation

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Mytube</title>
-      <meta http-equiv = "refresh" content = "10; url = https://localhost:3000" />
+      <meta http-equiv = "refresh" content = "10; url = http://localhost:3000" />
    </head>
    <body>
       <p>This page will redirect in 10 seconds.</p>
